--- a/engine/pre-alpha/21/index.html
+++ b/engine/pre-alpha/21/index.html
@@ -1463,69 +1463,135 @@
 						switch ( key ){
 
 							case "flipY":
-								value_input.value = editor[key] = Boolean(value);
+
+								var value = value_input.value; // bypass number value, string.
+								if ( value.toLowerCase() === "false" ) value = 0;     // accept "false" string.
+								else if ( value.toLowerCase() === "true" ) value = 1; // accept "true" string.
+								else if ( isNaN(value) ) value = Boolean(editor[key]); // avoid to pass NaN value!
+								else value = Boolean(value); // convert to boolean, important!
+
+								if ( editor[key] !== Boolean(value) ) { addtoUndo(); 
+									debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+								} 
+							//	editor watcher updates input value only if the editor value has changed,
+							//	so in this case we must to update the input value manualy.
+								else value_input.value = editor[key]; // boolean as string.
+
+							//	editor watcher updates value input.
+								setTimeout( function(){ editor[key] = Boolean(value); });
+
+							//	value_input.value = editor[key] = Boolean(value);
 							break;
 
 							case "format":
 								if ( [1021, 1022, 1023, 1024, 1025, 1026, 1027].includes( value ) ) {
-									if ( editor[ key ] !== Number(value) ) addtoUndo();
+									if ( editor[ key ] !== Number(value) ) { addtoUndo(); 
+										debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = editor[key]; // number as string.
+
 									setTimeout( function(){ editor[ key ] = Number(value); });
-								} else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
+								} 
+								else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
 								else value_input.value = editor[key] = 1023; // reset.
 							break;
 
 							case "mapping":
 								if ( [300, 301, 302, 303, 304, 305, 306, 307].includes( value ) ) {
-									if ( editor[ key ] !== Number(value) ) addtoUndo();
+									if ( editor[ key ] !== Number(value) ) { addtoUndo(); 
+										debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = editor[key]; // number as string.
+
 									setTimeout( function(){ editor[ key ] = Number(value); });
-								} else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
+								} 
+								else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
 								else value_input.value = editor[key] = 300; // reset.
 							break;
 
 							case "encoding":
 								if ( [3000, 3001, 3007, 3002, 3003, 3004, 3005, 3006, 3200, 3201].includes( value ) ) {
-									if ( editor[ key ] !== Number(value) ) addtoUndo();
+									if ( editor[ key ] !== Number(value) ) { addtoUndo(); 
+										debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = editor[key]; // number as string.
+
 									setTimeout( function(){ editor[ key ] = Number(value); });
-								} else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
+								} 
+								else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
 								else value_input.value = editor[key] = 3000; // reset.
 							break;
 
 							case "magFilter":
 								if ( [1003, 1006].includes( value ) ) {
-									if ( editor[ key ] !== Number(value) ) addtoUndo();
+									if ( editor[ key ] !== Number(value) ) { addtoUndo(); 
+										debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = editor[key]; // number as string.
+
 									setTimeout( function(){ editor[ key ] = Number(value); });
-								} else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
+								} 
+								else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
 								else value_input.value = editor[key] = 1006; // reset.
 							break;
 
 							case "minFilter":
 								if ( [1003, 1004, 1005, 1006, 1007, 1008].includes( value ) ) {
-									if ( editor[ key ] !== Number(value) ) addtoUndo();
+									if ( editor[ key ] !== Number(value) ) { addtoUndo(); 
+										debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = editor[key]; // number as string.
+
 									setTimeout( function(){ editor[ key ] = Number(value); });
-								} else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
+								} 
+								else if ( !isNaN( editor[key]) ) value_input.value = editor[key];
 								else value_input.value = editor[key] = 1008; // reset.
 							break;
 
 							case "anisotropy":
 								if ( !isNaN( value ) ) {
-									if ( editor[key] !== THREE.Math.clamp(value,1,-1) ) addtoUndo(); 
+									if ( editor[key] !== THREE.Math.clamp(value,1,-1) ) { addtoUndo(); 
+										debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = editor[key].toFixed(2); // number as string.
+
 									setTimeout(function(){
-										editor[ key ] = THREE.Math.clamp(value,1,-1);
+										editor[ key ] = THREE.Math.clamp(value,1,-1); // editor watcher updates value input.
 									//	value_input.value = ( editor[ key ] = THREE.Math.clamp(value,1,-1) ).toFixed(1);
 									});
-								} else if ( !isNaN( editor[key]) ) 
+								} 
+								else if ( !isNaN( editor[key]) ) 
 									value_input.value = editor[key].toFixed(2);
 								else value_input.value = editor[key] = 1; // reset.
 							break;
 
 							case "rotation":
 								if ( !isNaN( value ) ) { 
-									if ( editor[key] !== THREE.Math.clamp(DEG2RAD*value,-Math.PI, Math.PI) ) addtoUndo(); 
+									if ( editor[key] !== THREE.Math.clamp(DEG2RAD*value,-Math.PI, Math.PI) ) { 
+										addtoUndo(); debugMode && console.log( "undo:", undo.length, "redo:", redo.length ); 
+									}
+								//	editor watcher updates input value only if the editor value has changed,
+								//	so in this case we must to update the input value manualy.
+									else value_input.value = (RAD2DEG*editor[key]).toFixed(1); // number as string.
+
 									setTimeout(function(){
-										editor[key] = THREE.Math.clamp(DEG2RAD*value,-Math.PI, Math.PI);
+										editor[key] = THREE.Math.clamp(DEG2RAD*value,-Math.PI, Math.PI); 
 									//	value_input.value = THREE.Math.clamp((value),-180,180).toFixed(1);
 									});
-								} else if ( !isNaN( editor[key]) ) 
+								} 
+								else if ( !isNaN( editor[key]) ) 
 									value_input.value = THREE.Math.clamp((RAD2DEG*editor[key]),-180,180).toFixed(1);
 								else value_input.value = editor[key] = 0; // reset.
 							break;
@@ -1607,7 +1673,7 @@
 								var value = Number(editor[ key ]); // get value from editor.
 								if ( button === increase_v ) value = THREE.Math.clamp( value+step, min, max );
 								if ( button === decrease_v ) value = THREE.Math.clamp( value-step, min, max );
-								editor[ key ] = value; // update editor.
+								editor[ key ] = value; // update editor, (editor watcher updates input value).
 							//	value_input.value = ( RAD2DEG * ( editor[ key ] = value) ).toFixed(1); // string.
 
 							})();
@@ -1618,7 +1684,7 @@
 								var value = Number(editor[ key ]); // get value from editor.
 								if ( button === increase_v ) value = THREE.Math.clamp( value+step, min, max );
 								if ( button === decrease_v ) value = THREE.Math.clamp( value-step, min, max );
-								editor[key] = round(value, 2); // update editor.
+								editor[key] = round(value, 2); // update editor, (editor watcher updates input value).
 							//	value_input.value = ( editor[key] = round(value, 2) ).toFixed(2);
 
 							})();
@@ -2061,11 +2127,13 @@
 					});
 
 				//	Numbers.
-					watch( editor, "anisotropy", function( key, action, value, oldValue ){
+					watch( editor, "anisotropy", function( key, action, value ){
+						debugMode && console.log( "editor:", key, action, value );
 						if (texture) texture[ key ] = editor[ key ];
 						if ( key_droplist.value === key ) value_input.value = editor[ key ].toFixed(2);
 					});
-					watch( editor, "rotation", function( key, action, value, oldValue ){
+					watch( editor, "rotation", function( key, action, value ){
+						debugMode && console.log( "editor:", key, action, value );
 						if (texture) texture[ key ] = editor[ key ];
 						if ( key_droplist.value === key ) 
 							value_input.value = (RAD2DEG*editor[key]).toFixed(1); // string.
@@ -2113,6 +2181,7 @@
 
 				//	Boolean.
 					watch( editor, "flipY", function( key, action, value, oldValue ){
+					//	debugMode && console.log( "editor:", key, action, value );
 						if (texture) texture[ key ] = editor[ key ];
 						if ( key_droplist.value === key ) value_input.value = editor[ key ];
 					});
