--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -312,7 +312,7 @@
 
 			console.log( {"object3DEditor": object3DEditor} ); // debug!
 			console.log( {"materialEditor": materialEditor} ); // debug!
-			console.log( {"textureEditor" : textureEditor}  ); // debug!
+		//	console.log( {"textureEditor" : textureEditor}  ); // debug!
 
 		</script>
 
@@ -320,10 +320,10 @@
 
 		//	Viewport tab.
 
-		//	TabUI.Texture.role.classList.remove("active");
-		//	TabUI.Texture.tab.classList.remove("in","active");
-			TabUI.Viewport.role.classList.add("active");
-			TabUI.Viewport.tab.classList.add("in","active");
+			TabUI.Texture.role.classList.remove("active");
+			TabUI.Texture.tab.classList.remove("in","active");
+		//	TabUI.Viewport.role.classList.add("active");
+		//	TabUI.Viewport.tab.classList.add("in","active");
 
 		</script>
 
