--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -155,6 +155,7 @@
 		<script src="/ecs/engine/src/editors/texture-editor/replace-image-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/exit-editor-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/textureViewer.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/textureViewerCenter.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
 
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
